Updated some CSS

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 >
                             </h1>
                             <div class="button">
-                                <a href="#contact" type="button" class="cta"
+                                <a href="#about" type="button" class="cta"
                                     >I need a dev</a
                                 >
                             </div>
@@ -255,16 +255,28 @@
                     <div class="services-left">
                         <ul class="icons">
                             <li>
-                                <img src="/images/icon-consulting.png" alt="Consulting">
-                            </li>                       
-                            <li>
-                                <img src="/images/icon-planning.png" alt="Planning">
+                                <img
+                                    src="/images/icon-consulting.png"
+                                    alt="Consulting"
+                                />
                             </li>
                             <li>
-                                <img src="/images/icon-build.png" alt="Building">
+                                <img
+                                    src="/images/icon-planning.png"
+                                    alt="Planning"
+                                />
                             </li>
                             <li>
-                                <img src="/images/icon-launch.png" alt="Launch">
+                                <img
+                                    src="/images/icon-build.png"
+                                    alt="Building"
+                                />
+                            </li>
+                            <li>
+                                <img
+                                    src="/images/icon-launch.png"
+                                    alt="Launch"
+                                />
                             </li>
                         </ul>
                     </div>
@@ -272,7 +284,7 @@
                         <header>
                             <h2>My Services</h2>
                         </header>
-                        <hr>
+                        <hr />
                         <p>
                             I dedicate myself to meet and exceed my clients
                             initial vision of their passion project. Knowing
@@ -325,20 +337,33 @@
                     Feel free to explore each of the websites below in more
                     detail.
                 </p>
-                <div class="projects container">
+                <section class="projects container">
                     <div class="project-item">
                         <h1 class="project-item-header">
-                            Silverpoint Sneakers
+                            Silverpoin<span class="pinkh1">t</span> Sneakers
                         </h1>
-                        <img src="/images/pic01.png" alt="">
-                        <p>A fully responsive website for a local sneaker and clothing retailer named Silverpoint Sneakers.</p>
+                        <img
+                            class="project-img"
+                            src="/images/pic01.png"
+                            alt="Silverpoint"
+                        />
+                        <p>
+                            A fully responsive website for a local sneaker and
+                            clothing retailer named Silverpoint Sneakers.
+                        </p>
                         <div class="button">
                             <a href="#" type="button" class="cta">Visit</a>
                         </div>
                     </div>
                     <div class="project-item">
-                        <h1 class="project-item-header">Paterro's Kitchen</h1>
-                        <img src="/images/pic02.png" alt="">
+                        <h1 class="project-item-header">
+                            Paterro<span class="pinkh1">'</span>s Kitchen
+                        </h1>
+                        <img
+                            class="project-img"
+                            src="/images/pic02.png"
+                            alt="Paterro's"
+                        />
                         <p>
                             A website created for a local restaurant to showcase
                             the talent and skill of the head chef and owner.
@@ -348,8 +373,14 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <h1 class="project-item-header">Ayesha's Salon</h1>
-                        <img src="/images/pic03.png" alt="">
+                        <h1 class="project-item-header">
+                            Ayesha<span class="pinkh1">'</span>s Salon
+                        </h1>
+                        <img
+                            class="project-img"
+                            src="/images/pic03.png"
+                            alt="Ayesha's"
+                        />
                         <p>
                             A website created for a local hair salon. It
                             showcases the owners skills with a lookbook and
@@ -358,7 +389,8 @@
                         <div class="button">
                             <a href="#" type="button" class="cta">Visit</a>
                         </div>
-                </div>
+                    </div>
+                </section>
             </section>
             <!-- End of Projects Section -->
 
@@ -372,7 +404,7 @@
                         <header>
                             <h2>I'm here to help</h2>
                         </header>
-                        <hr>
+                        <hr />
                         <p>
                             I am a software engineer based in Boston,
                             Massachusetts and I am passionate about helping
