Changed main font

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="hero-right">
-                        <h2>
+                        <h2 class="titleText">
                             I am a software engineer and a full-stack web
                             developer.
                         </h2>
@@ -333,10 +333,7 @@
                 <h1 class="section-title">
                     Pro<span class="pink">j</span>ects
                 </h1>
-                <p>
-                    Feel free to explore each of the websites below in more
-                    detail.
-                </p>
+                <p>Here are a few of the sites I've made recently:</p>
                 <section class="projects container">
                     <div class="project-item">
                         <h1 class="project-item-header">
@@ -348,8 +345,9 @@
                             alt="Silverpoint"
                         />
                         <p>
-                            A fully responsive website for a local sneaker and
-                            clothing retailer named Silverpoint Sneakers.
+                            A fully responsive website for a local sneaker,
+                            clothing, and watch retailer named Silverpoint
+                            Sneakers.
                         </p>
                         <div class="button">
                             <a href="#" type="button" class="cta">Visit</a>
@@ -430,8 +428,8 @@
                             it.
                         </p>
                         <div class="button">
-                            <a href="#resume" type="button" class="cta"
-                                >Download Resume</a
+                            <a href="#contact" type="button" class="cta"
+                                >Contact Me</a
                             >
                         </div>
                     </div>
@@ -539,7 +537,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>Copyright © 2021 Tyler McKenna. All rights reserved.</p>
+                    <p>Copyright © 2022 Tyler McKenna. All rights reserved.</p>
                 </div>
             </section>
             <!-- End of Footer -->
