Added clickable links to external portfolio sites

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                         <p>
                             We will discuss your project with a problem-solving
                             attitude to suggest, recommend, and design the best
-                            solution for your website project while I focus on
-                            writing the code that meets the project's
-                            specifications and your needs.
+                            solution for your project while I focus on writing
+                            the code that meets the project's specifications and
+                            your needs.
                         </p>
                         <h4><strong>Planning</strong></h4>
                         <p>
@@ -312,16 +312,17 @@
                             will begin to create your project. I will give
                             frequent updates of progress made along the way.
                             Communication is key at this stage and I will make
-                            sure that you are aware of any hurdles as I create
-                            and test your project.
+                            sure that you are aware of any hurdles and
+                            milestones as I create and test your project.
                         </p>
                         <h4><strong>Launch</strong></h4>
                         <p>
-                            Once I complete the project in accordance to your
-                            final vision, we will go over your project one last
-                            time. If everything looks good we will launch your
-                            project and I will provide ongoing support in
-                            accordance to our initial agreement.
+                            Once I have completed the project that represents
+                            your final vision, we will go over your project one
+                            last time. If everything is up to both of our
+                            standards we will launch your project and I will
+                            provide ongoing support in accordance to our initial
+                            agreement.
                         </p>
                     </div>
                 </div>
@@ -340,6 +341,7 @@
                             Silverpoin<span class="pinkh1">t</span> Sneakers
                         </h1>
                         <img
+                            id="silverpoint-img"
                             class="project-img"
                             src="/images/pic01.png"
                             alt="Silverpoint"
@@ -364,6 +366,7 @@
                             Paterro<span class="pinkh1">'</span>s Kitchen
                         </h1>
                         <img
+                            id="paterros-img"
                             class="project-img"
                             src="/images/pic02.png"
                             alt="Paterro's"
@@ -387,6 +390,7 @@
                             Ayesha<span class="pinkh1">'</span>s Salon
                         </h1>
                         <img
+                            id="salon-img"
                             class="project-img"
                             src="/images/pic03.png"
                             alt="Ayesha's"
@@ -565,5 +569,5 @@
     </body>
 
     <!-- Scripts -->
-    <script src="../JS/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </html>
