Started work on the media queries. Working mobile first

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                     </p>
                 </div>
             </section>
+            <!-- End of Statement Section -->
 
             <!-- Beginning of Services Section -->
             <section id="services" class="section-style-2">
