Added proper links to the social media icons

--- a/index.html
+++ b/index.html
@@ -531,28 +531,36 @@
                         <h2>Your Complete Web Solution</h2>
                         <div class="social-icon">
                             <div class="social-item">
-                                <a href="#"
+                                <a
+                                    href="https://www.facebook.com/profile.php?id=60716390"
+                                    target="_blank"
                                     ><img
                                         src="/Images/icon-facebook.png"
                                         alt="Facebook"
                                 /></a>
                             </div>
                             <div class="social-item">
-                                <a href="#"
+                                <a
+                                    href="https://www.instagram.com/yeoldeknob/"
+                                    target="_blank"
                                     ><img
                                         src="/Images/icon-instagram.png"
                                         alt="Instagram"
                                 /></a>
                             </div>
                             <div class="social-item">
-                                <a href="#"
+                                <a
+                                    href="https://github.com/TylerIsCoding"
+                                    target="_blank"
                                     ><img
                                         src="/Images/icon-github.png"
                                         alt="GitHub"
                                 /></a>
                             </div>
                             <div class="social-item">
-                                <a href="#"
+                                <a
+                                    href="https://www.linkedin.com/in/tyler-is-coding/"
+                                    target="_blank"
                                     ><img
                                         src="/Images/icon-linkedin.png"
                                         alt="LinkedIn"
