Chagned heading text

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
                     </div>
                     <div class="hero-right">
                         <h2 class="titleText">
-                            I am a software engineer and a full-stack web
-                            developer.
+                            I am a designer and a full-stack web developer.
                         </h2>
                     </div>
                 </div>
