Attempting to get netlify forms working correctly

--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
                                 required
                             />
                         </div>
-                        <div class="button" type="submit">
-                            <a href="#submit" type="button" class="cta"
+                        <div class="button">
+                            <a href="#submit" type="submit" class="cta"
                                 >Submit</a
                             >
                         </div>
