Attempting to get netlify forms working correctly

--- a/index.html
+++ b/index.html
@@ -519,11 +519,12 @@
                                 required
                             />
                         </div>
-                        <div class="button">
+                        <button type="submit">Submit</button>
+                        <!-- <div class="button">
                             <a href="#submit" type="submit" class="cta"
                                 >Submit</a
                             >
-                        </div>
+                        </div> -->
                     </form>
                 </div>
             </section>
