Attempting to get netlify forms working correctly

--- a/index.html
+++ b/index.html
@@ -519,12 +519,11 @@
                                 required
                             />
                         </div>
-                        <button type="submit">Submit</button>
-                        <!-- <div class="button">
-                            <a href="#submit" type="submit" class="cta"
-                                >Submit</a
-                            >
-                        </div> -->
+                        <div class="contact-item">
+                            <button class="submitButton" type="submit">
+                                Submit
+                            </button>
+                        </div>
                     </form>
                 </div>
             </section>
