Removed facebook link and replaced it with Twitter

--- a/index.html
+++ b/index.html
@@ -542,11 +542,11 @@
                         <div class="social-icon">
                             <div class="social-item">
                                 <a
-                                    href="https://www.facebook.com/profile.php?id=60716390"
+                                    href="https://twitter.com/tylertmckenna"
                                     target="_blank"
                                     ><img
-                                        src="/Images/icon-facebook.png"
-                                        alt="Facebook"
+                                        src="/Images/icon-twitter.png"
+                                        alt="Twitter"
                                 /></a>
                             </div>
                             <div class="social-item">
