Added header text to jacket site

--- a/shoe-store/jackets.html
+++ b/shoe-store/jackets.html
@@ -17,6 +17,10 @@
             href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
@@ -87,6 +91,16 @@
         </header>
         <main>
             <section class="shirt-hero">
+                <section class="jacket-hero-text">
+                    <h1>Select Adidas items now on sale!</h1>
+                    <img
+                        src="./images/images-logos/Adidas_logo.png"
+                        alt="Adidas_logo"
+                    />
+                    <div class="jacket-button">
+                        <a href="#adidas-section">show me</a>
+                    </div>
+                </section>
                 <section class="jacket-hero-image"></section>
             </section>
             <section class="sneakers-items">
@@ -143,7 +157,7 @@
                         <a href="#">Add to Cart</a>
                     </div>
                 </section>
-                <section class="brand">
+                <section class="brand" id="adidas-section">
                     <hr />
                     <img
                         src="./images/images-logos/Adidas_logo.png"
