--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tyler is Coding</title>
         <link rel="stylesheet" href="../CSS/style.css" />
+        <link rel="icon" href="./images/tab-icon.png" />
     </head>
     <body>
         <!-- Beginning of Header Section -->
@@ -209,7 +210,7 @@
             <section id="statement" class="section-style-1">
                 <div class="statement-header">
                     <h1 class="section-title">
-                        My Mi<span class="pinkh1">s</span>sion
+                        <span class="pinkh1">My</span> Mission
                     </h1>
                 </div>
                 <div class="statement container">
