--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Tyler is Coding</title>
         <link rel="stylesheet" href="../CSS/style.css" />
         <link rel="icon" href="./images/tab-icon.png" />
+        <link rel="image_src" href="./images/site-preview-image.png" />
     </head>
     <body>
         <!-- Beginning of Header Section -->
