--- a/index.html
+++ b/index.html
@@ -68,27 +68,6 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">
-                            <svg
-                                aria-hidden="true"
-                                focusable="false"
-                                data-prefix="fas"
-                                data-icon="handshake-angle"
-                                class="svg-inline--fa fa-handshake-angle"
-                                role="img"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 640 512"
-                            >
-                                <path
-                                    fill="currentColor"
-                                    d="M488 191.1h-152l.0001 51.86c.0001 37.66-27.08 72-64.55 75.77c-43.09 4.333-79.45-29.42-79.45-71.63V126.4l-24.51 14.73C123.2 167.8 96.04 215.7 96.04 267.5L16.04 313.8c-15.25 8.751-20.63 28.38-11.75 43.63l80 138.6c8.875 15.25 28.5 20.5 43.75 11.75l103.4-59.75h136.6c35.25 0 64-28.75 64-64c26.51 0 48-21.49 48-48V288h8c13.25 0 24-10.75 24-24l.0001-48C512 202.7 501.3 191.1 488 191.1zM635.7 154.5l-79.95-138.6c-8.875-15.25-28.5-20.5-43.75-11.75l-103.4 59.75h-62.57c-37.85 0-74.93 10.61-107.1 30.63C229.7 100.4 224 110.6 224 121.6l-.0004 126.4c0 22.13 17.88 40 40 40c22.13 0 40-17.88 40-40V159.1h184c30.93 0 56 25.07 56 56v28.5l80-46.25C639.3 189.4 644.5 169.8 635.7 154.5z"
-                                    class="fa-primary"
-                                ></path>
-                            </svg>
-                            <span class="link-text">Services</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
                         <a href="#projects" class="nav-link">
                             <svg
                                 aria-hidden="true"
@@ -107,6 +86,27 @@
                                 ></path>
                             </svg>
                             <span class="link-text">Projects</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#services" class="nav-link">
+                            <svg
+                                aria-hidden="true"
+                                focusable="false"
+                                data-prefix="fas"
+                                data-icon="handshake-angle"
+                                class="svg-inline--fa fa-handshake-angle"
+                                role="img"
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 640 512"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M488 191.1h-152l.0001 51.86c.0001 37.66-27.08 72-64.55 75.77c-43.09 4.333-79.45-29.42-79.45-71.63V126.4l-24.51 14.73C123.2 167.8 96.04 215.7 96.04 267.5L16.04 313.8c-15.25 8.751-20.63 28.38-11.75 43.63l80 138.6c8.875 15.25 28.5 20.5 43.75 11.75l103.4-59.75h136.6c35.25 0 64-28.75 64-64c26.51 0 48-21.49 48-48V288h8c13.25 0 24-10.75 24-24l.0001-48C512 202.7 501.3 191.1 488 191.1zM635.7 154.5l-79.95-138.6c-8.875-15.25-28.5-20.5-43.75-11.75l-103.4 59.75h-62.57c-37.85 0-74.93 10.61-107.1 30.63C229.7 100.4 224 110.6 224 121.6l-.0004 126.4c0 22.13 17.88 40 40 40c22.13 0 40-17.88 40-40V159.1h184c30.93 0 56 25.07 56 56v28.5l80-46.25C639.3 189.4 644.5 169.8 635.7 154.5z"
+                                    class="fa-primary"
+                                ></path>
+                            </svg>
+                            <span class="link-text">Services</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -246,93 +246,8 @@
             </section>
             <!-- End of Statement Section -->
 
-            <!-- Beginning of Services Section -->
-            <section id="services" class="section-style-2">
-                <div class="services-header">
-                    <h1 class="section-title">
-                        Ser<span class="pinkh1">v</span>ices
-                    </h1>
-                </div>
-                <div class="services container">
-                    <div class="services-left">
-                        <ul class="icons">
-                            <li>
-                                <img
-                                    src="/images/icon-consulting.png"
-                                    alt="Consulting"
-                                />
-                            </li>
-                            <li>
-                                <img
-                                    src="/images/icon-planning.png"
-                                    alt="Planning"
-                                />
-                            </li>
-                            <li>
-                                <img
-                                    src="/images/icon-build.png"
-                                    alt="Building"
-                                />
-                            </li>
-                            <li>
-                                <img
-                                    src="/images/icon-launch.png"
-                                    alt="Launch"
-                                />
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="services-right">
-                        <header>
-                            <h2>My Services</h2>
-                        </header>
-                        <hr />
-                        <p>
-                            I dedicate myself to meet and exceed my clients
-                            initial vision of their passion project. Knowing
-                            what to expect when we work together is critical -
-                            here is how I deliver success:
-                        </p>
-                        <h4><strong>Consultation</strong></h4>
-                        <p>
-                            We will discuss your project with a problem-solving
-                            attitude to suggest, recommend, and design the best
-                            solution for your project while I focus on writing
-                            the code that meets the project's specifications and
-                            your needs.
-                        </p>
-                        <h4><strong>Planning</strong></h4>
-                        <p>
-                            After we decide what you want your dream project to
-                            be, I will begin the planning phase. I will draw up
-                            a proposal for you that includes a visual preview, a
-                            plan of action, and a creation timeline.
-                        </p>
-                        <h4><strong>Creation</strong></h4>
-                        <p>
-                            Once we come to an agreement with the proposal, I
-                            will begin to create your project. I will give
-                            frequent updates of progress made along the way.
-                            Communication is key at this stage and I will make
-                            sure that you are aware of any hurdles and
-                            milestones as I create and test your project.
-                        </p>
-                        <h4><strong>Launch</strong></h4>
-                        <p>
-                            Once I have completed the project that represents
-                            your final vision, we will go over your project one
-                            last time. If everything is up to both of our
-                            standards we will launch your project and I will
-                            provide ongoing support in accordance to our initial
-                            agreement.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <!-- End of Services Section -->
-
             <!-- Beginning of Projects Section -->
-            <section id="projects" class="section-style-1">
+            <section id="projects" class="section-style-2">
                 <h1 class="section-title">
                     Pro<span class="pink">j</span>ects
                 </h1>
@@ -416,6 +331,120 @@
             </section>
             <!-- End of Projects Section -->
 
+            <!-- Beginning of Services Section -->
+            <section id="services" class="section-style-1">
+                <div class="services-header">
+                    <h1 class="section-title">
+                        Ser<span class="pinkh1">v</span>ices
+                    </h1>
+                </div>
+                <div class="services container">
+                    <div class="services-left">
+                        <ul class="icons">
+                            <li>
+                                <img
+                                    src="/images/icon-consulting.png"
+                                    alt="Consulting"
+                                />
+                            </li>
+                            <li>
+                                <img
+                                    src="/images/icon-planning.png"
+                                    alt="Planning"
+                                />
+                            </li>
+                            <li>
+                                <img
+                                    src="/images/icon-build.png"
+                                    alt="Building"
+                                />
+                            </li>
+                            <li>
+                                <img
+                                    src="/images/icon-launch.png"
+                                    alt="Launch"
+                                />
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="services-right">
+                        <header>
+                            <h2>My Services</h2>
+                        </header>
+                        <hr />
+                        <p>
+                            I dedicate myself to meet and exceed my clients
+                            initial vision of their passion project. Knowing
+                            what to expect when we work together is critical -
+                            here is how I deliver success:
+                        </p>
+
+                        <h4>
+                            <span
+                                ><img
+                                    class="small-icon"
+                                    src="./images/icon-consulting.png"
+                                    alt="Gear-icon" /></span
+                            ><strong>Consultation</strong>
+                        </h4>
+                        <p>
+                            We will discuss your project with a problem-solving
+                            attitude to suggest, recommend, and design the best
+                            solution for your project while I focus on writing
+                            the code that meets the project's specifications and
+                            your needs.
+                        </p>
+                        <h4>
+                            <span
+                                ><img
+                                    class="small-icon"
+                                    src="./images/icon-planning.png"
+                                    alt="Gear-icon" /></span
+                            ><strong>Planning</strong>
+                        </h4>
+                        <p>
+                            After we decide what you want your dream project to
+                            be, I will begin the planning phase. I will draw up
+                            a proposal for you that includes a visual preview, a
+                            plan of action, and a creation timeline.
+                        </p>
+                        <h4>
+                            <span
+                                ><img
+                                    class="small-icon"
+                                    src="./images/icon-build.png"
+                                    alt="Gear-icon" /></span
+                            ><strong>Creation</strong>
+                        </h4>
+                        <p>
+                            Once we come to an agreement with the proposal, I
+                            will begin to create your project. I will give
+                            frequent updates of progress made along the way.
+                            Communication is key at this stage and I will make
+                            sure that you are aware of any hurdles and
+                            milestones as I create and test your project.
+                        </p>
+                        <h4>
+                            <span
+                                ><img
+                                    class="small-icon"
+                                    src="./images/icon-launch.png"
+                                    alt="Gear-icon" /></span
+                            ><strong>Launch</strong>
+                        </h4>
+                        <p>
+                            Once I have completed the project that represents
+                            your final vision, we will go over your project one
+                            last time. If everything is up to both of our
+                            standards we will launch your project and I will
+                            provide ongoing support in accordance to our initial
+                            agreement.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <!-- End of Services Section -->
+
             <!-- Start of About Me Section -->
             <section id="about" class="section-style-2">
                 <h1 class="section-title">
@@ -433,30 +462,37 @@
                             clients and businesses increase their web presence
                             by building responsive and beautiful websites.
                         </p>
-                        <p>
-                            I went to The New England Institute of Art and
-                            received my degree in Digital Art and Animation.
-                            During my schooling I learned many software suites
-                            including the Adobe Creative Suite, 3Ds Max, Maya,
-                            and more. A chunk of my courses were in web design,
-                            web development, and programming to make rudimentary
-                            websites. This was the first spark of a life-long
-                            passion for web development.
-                        </p>
-                        <p>
-                            When I am not writing code you can typically find me
-                            making playlists, reading books, gaming, playing
-                            guitar, creating art, or endlessly scrolling
-                            Instagram. Most recently, I have gotten really into
-                            collecting sneakers. My wallet does not appreciate
-                            it.
-                        </p>
-                        <div class="button">
+                        <div class="content">
+                            <p>
+                                I went to The New England Institute of Art and
+                                received my degree in Digital Art and Animation.
+                                During my schooling I learned many software
+                                suites including the Adobe Creative Suite, 3Ds
+                                Max, Maya, and more. A chunk of my courses were
+                                in web design, web development, and programming
+                                to make rudimentary websites. This was the first
+                                spark of a life-long passion for web
+                                development.
+                            </p>
+                            <p>
+                                When I am not writing code you can typically
+                                find me making playlists, reading books, gaming,
+                                playing guitar, creating art, or endlessly
+                                scrolling Instagram. Most recently, I have
+                                gotten really into collecting sneakers. My
+                                wallet does not appreciate it.
+                            </p>
+                        </div>
+                        <div class="button more">
+                            <h3 class="cta more-text">More</h3>
+                        </div>
+
+                        <!-- <div class="button">
                             <a href="#contact" type="button" class="cta"
                                 >Contact Me</a
                             >
                         </div>
-                    </div>
+                    --></div>
                     <div class="col-right">
                         <div class="about-img">
                             <img
