Moved sections around further

--- a/index.html
+++ b/index.html
@@ -68,6 +68,27 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="#about" class="nav-link">
+                            <svg
+                                aria-hidden="true"
+                                focusable="false"
+                                data-prefix="fas"
+                                data-icon="address-card"
+                                class="svg-inline--fa fa-address-card"
+                                role="img"
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 576 512"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M512 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h448c35.35 0 64-28.65 64-64V96C576 60.65 547.3 32 512 32zM176 128c35.35 0 64 28.65 64 64s-28.65 64-64 64s-64-28.65-64-64S140.7 128 176 128zM272 384h-192C71.16 384 64 376.8 64 368C64 323.8 99.82 288 144 288h64c44.18 0 80 35.82 80 80C288 376.8 280.8 384 272 384zM496 320h-128C359.2 320 352 312.8 352 304S359.2 288 368 288h128C504.8 288 512 295.2 512 304S504.8 320 496 320zM496 256h-128C359.2 256 352 248.8 352 240S359.2 224 368 224h128C504.8 224 512 231.2 512 240S504.8 256 496 256zM496 192h-128C359.2 192 352 184.8 352 176S359.2 160 368 160h128C504.8 160 512 167.2 512 176S504.8 192 496 192z"
+                                    class="fa-primary"
+                                ></path>
+                            </svg>
+                            <span class="link-text">About Me</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#projects" class="nav-link">
                             <svg
                                 aria-hidden="true"
@@ -107,27 +128,6 @@
                                 ></path>
                             </svg>
                             <span class="link-text">Services</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link">
-                            <svg
-                                aria-hidden="true"
-                                focusable="false"
-                                data-prefix="fas"
-                                data-icon="address-card"
-                                class="svg-inline--fa fa-address-card"
-                                role="img"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 576 512"
-                            >
-                                <path
-                                    fill="currentColor"
-                                    d="M512 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h448c35.35 0 64-28.65 64-64V96C576 60.65 547.3 32 512 32zM176 128c35.35 0 64 28.65 64 64s-28.65 64-64 64s-64-28.65-64-64S140.7 128 176 128zM272 384h-192C71.16 384 64 376.8 64 368C64 323.8 99.82 288 144 288h64c44.18 0 80 35.82 80 80C288 376.8 280.8 384 272 384zM496 320h-128C359.2 320 352 312.8 352 304S359.2 288 368 288h128C504.8 288 512 295.2 512 304S504.8 320 496 320zM496 256h-128C359.2 256 352 248.8 352 240S359.2 224 368 224h128C504.8 224 512 231.2 512 240S504.8 256 496 256zM496 192h-128C359.2 192 352 184.8 352 176S359.2 160 368 160h128C504.8 160 512 167.2 512 176S504.8 192 496 192z"
-                                    class="fa-primary"
-                                ></path>
-                            </svg>
-                            <span class="link-text">About Me</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -207,47 +207,69 @@
             </section>
             <!-- End of Hero Section -->
 
-            <!-- Beginning of Statement Section -->
-            <section id="statement" class="section-style-1">
-                <div class="statement-header">
-                    <h1 class="section-title">
-                        <span class="pinkh1">My</span> Mission
-                    </h1>
-                </div>
-                <div class="statement container">
-                    <header>
-                        <h2>Do you have a web presence?</h2>
-                    </header>
-                    <hr />
-                    <p>
-                        If you or someone you know needs to show a client what
-                        you can provide, how will you show them? How will your
-                        website draw them in? What happens if they look at your
-                        site on a phone? A tablet?
-                    </p>
-                    <p>
-                        It is crucial that the websites that represent us and
-                        our business are responsive and accessible. Responsive
-                        design allows your website content to flow freely across
-                        all screen resolutions and sizes, and renders it to look
-                        great on all devices. It also makes it unnecessary to
-                        maintain different versions of your website for mobile
-                        and desktop and saves you time, resources and efforts.
-                    </p>
-                    <p>
-                        Accessibility means that all people can perceive,
-                        understand, navigate, and interact with electronic
-                        information and be active, contributing members of the
-                        digital world. Visual, auditory, physical, speech,
-                        cognitive, and neurological disabilities should be taken
-                        into account when implementing accessibility measures.
-                    </p>
+            <!-- Start of About Me Section -->
+            <section id="about" class="section-style-2">
+                <h1 class="section-title">
+                    About <span class="pink">Me</span>
+                </h1>
+                <div class="about container">
+                    <div class="col-left">
+                        <header>
+                            <h2>I'm here to help</h2>
+                        </header>
+                        <hr />
+                        <p>
+                            I am a software engineer based in Boston,
+                            Massachusetts and I am passionate about helping
+                            clients and businesses increase their web presence
+                            by building responsive and beautiful websites.
+                        </p>
+                        <div class="content">
+                            <p>
+                                I went to The New England Institute of Art and
+                                received my degree in Digital Art and Animation.
+                                During my schooling I learned many software
+                                suites including the Adobe Creative Suite, 3Ds
+                                Max, Maya, and more. A chunk of my courses were
+                                in web design, web development, and programming
+                                to make rudimentary websites. This was the first
+                                spark of a life-long passion for web
+                                development.
+                            </p>
+                            <p>
+                                When I am not writing code you can typically
+                                find me making playlists, reading books, gaming,
+                                playing guitar, creating art, or endlessly
+                                scrolling Instagram. Most recently, I have
+                                gotten really into collecting sneakers. My
+                                wallet does not appreciate it.
+                            </p>
+                        </div>
+                        <div class="button more">
+                            <h3 class="cta more-text">More</h3>
+                        </div>
+
+                        <!-- <div class="button">
+                                        <a href="#contact" type="button" class="cta"
+                                            >Contact Me</a
+                                        >
+                                    </div>
+                                -->
+                    </div>
+                    <div class="col-right">
+                        <div class="about-img">
+                            <img
+                                src="/images/profile-img.jpg"
+                                alt="Image of Tyler"
+                            />
+                        </div>
+                    </div>
                 </div>
             </section>
-            <!-- End of Statement Section -->
+            <!-- End of About Me Section -->
 
             <!-- Beginning of Projects Section -->
-            <section id="projects" class="section-style-2">
+            <section id="projects" class="section-style-1">
                 <h1 class="section-title">
                     Pro<span class="pink">j</span>ects
                 </h1>
@@ -330,6 +352,45 @@
                 </section>
             </section>
             <!-- End of Projects Section -->
+
+            <!-- Beginning of Statement Section -->
+            <section id="statement" class="section-style-2">
+                <div class="statement-header">
+                    <h1 class="section-title">
+                        <span class="pinkh1">My</span> Mission
+                    </h1>
+                </div>
+                <div class="statement container">
+                    <header>
+                        <h2>Do you have a web presence?</h2>
+                    </header>
+                    <hr />
+                    <p>
+                        If you or someone you know needs to show a client what
+                        you can provide, how will you show them? How will your
+                        website draw them in? What happens if they look at your
+                        site on a phone? A tablet?
+                    </p>
+                    <p>
+                        It is crucial that the websites that represent us and
+                        our business are responsive and accessible. Responsive
+                        design allows your website content to flow freely across
+                        all screen resolutions and sizes, and renders it to look
+                        great on all devices. It also makes it unnecessary to
+                        maintain different versions of your website for mobile
+                        and desktop and saves you time, resources and efforts.
+                    </p>
+                    <p>
+                        Accessibility means that all people can perceive,
+                        understand, navigate, and interact with electronic
+                        information and be active, contributing members of the
+                        digital world. Visual, auditory, physical, speech,
+                        cognitive, and neurological disabilities should be taken
+                        into account when implementing accessibility measures.
+                    </p>
+                </div>
+            </section>
+            <!-- End of Statement Section -->
 
             <!-- Beginning of Services Section -->
             <section id="services" class="section-style-1">
@@ -445,68 +506,8 @@
             </section>
             <!-- End of Services Section -->
 
-            <!-- Start of About Me Section -->
-            <section id="about" class="section-style-2">
-                <h1 class="section-title">
-                    About <span class="pink">Me</span>
-                </h1>
-                <div class="about container">
-                    <div class="col-left">
-                        <header>
-                            <h2>I'm here to help</h2>
-                        </header>
-                        <hr />
-                        <p>
-                            I am a software engineer based in Boston,
-                            Massachusetts and I am passionate about helping
-                            clients and businesses increase their web presence
-                            by building responsive and beautiful websites.
-                        </p>
-                        <div class="content">
-                            <p>
-                                I went to The New England Institute of Art and
-                                received my degree in Digital Art and Animation.
-                                During my schooling I learned many software
-                                suites including the Adobe Creative Suite, 3Ds
-                                Max, Maya, and more. A chunk of my courses were
-                                in web design, web development, and programming
-                                to make rudimentary websites. This was the first
-                                spark of a life-long passion for web
-                                development.
-                            </p>
-                            <p>
-                                When I am not writing code you can typically
-                                find me making playlists, reading books, gaming,
-                                playing guitar, creating art, or endlessly
-                                scrolling Instagram. Most recently, I have
-                                gotten really into collecting sneakers. My
-                                wallet does not appreciate it.
-                            </p>
-                        </div>
-                        <div class="button more">
-                            <h3 class="cta more-text">More</h3>
-                        </div>
-
-                        <!-- <div class="button">
-                            <a href="#contact" type="button" class="cta"
-                                >Contact Me</a
-                            >
-                        </div>
-                    --></div>
-                    <div class="col-right">
-                        <div class="about-img">
-                            <img
-                                src="/images/profile-img.jpg"
-                                alt="Image of Tyler"
-                            />
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End of About Me Section -->
-
             <!-- Start of Contact Section -->
-            <section id="contact">
+            <section id="contact" class="section-style-2">
                 <div class="contact container">
                     <div class="contact-header">
                         <h1 class="section-title">
